--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.19.2"
+    
+  },
+  "devDependencies": {
     "nodemon": "^3.1.2"
   }
 }
