--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
-    
-  },
-  "devDependencies": {
+    "express": "^4.19.2",
     "nodemon": "^3.1.2"
   }
 }
